--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="https://cdn.lgrckt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
     <script>
-       window.LogRocket && window.LogRocket.init('hitfhq/dcref-emt');
+       window.LogRocket && window.LogRocket.init('pfmsbg/dcrefbot');
     </script>
     <script src="https://www.unpkg.com/@hyperdx/browser@0.21.0/build/index.js"></script>
     <script>
