--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -11108,18 +11108,20 @@
                 // Ensure data is loaded before calling openSpecificEpisode
                 const urlParams = new URLSearchParams(window.location.search);
                 const episodeCode = urlParams.get("code");
-                console.log('code-param-init:', { code: episodeCode});
+                if (episodeCode) console.log('code-param-init:', { code: episodeCode});
 
                 if (episodeCode && this.episodes && this.episodes.length > 0) {
                     this.openSpecificEpisode(episodeCode); // Open the episode if data is loaded
                 } else {
                     // If the data isn't loaded yet, watch for changes
-                    this.$watch('episodes', (newEpisodes) => {
-                        if (newEpisodes && newEpisodes.length > 0 && episodeCode) {
-                            console.log('code-param-open:', { code: episodeCode, episodesCount: newEpisodes.length });
-                            this.openSpecificEpisode(episodeCode);
-                        }
-                    });
+                    if (episodeCode) {
+                        this.$watch('episodes', (newEpisodes) => {
+                            if (newEpisodes && newEpisodes.length > 0) {
+                                console.log('code-param-open:', { code: episodeCode, episodesCount: newEpisodes.length });
+                                this.openSpecificEpisode(episodeCode);
+                            }
+                        });
+                    }
                 }
 
                 this.updateFontSize();
