--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -21,6 +21,7 @@
             defaults: '2025-11-30',
             person_profiles: 'identified_only',
         })
+        posthog.startExceptionAutocapture()
     </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
