--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5041,6 +5041,9 @@
                     } catch (e) {}
                     this.activeFilterHighlightedEl = null;
                 },
+                escapeMarkdown(text) {
+                    return String(text).replace(/[_*[\]()~`>#+\-=|{}.!]/g, '\\$&');
+                },
                 onFilterCheckboxChange(key, event) {
                     const checked = Boolean(event && event.target && event.target.checked);
                     this.setByKey(key, checked);
