--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2056,24 +2056,32 @@
                                             <span>صفحة</span>
                                         </label>
                                     </div>
-                                    <input
-                                        v-model.trim="jumpInput"
-                                        @focus="onJumpInputFocus"
-                                        @blur="onJumpInputBlur"
-                                        @keydown.enter.prevent="executeJumpValue"
-                                        :inputmode="jumpTargetMode === 'page' ? 'numeric' : 'text'"
-                                        :pattern="jumpTargetMode === 'page' ? '[0-9٠-٩۰-۹]*' : undefined"
-                                        :class="[
-                                            'flex-1 w-full max-w-xs px-1 py-2 text-lg bg-gray-700 rounded text-white focus:outline-none focus:ring-2 focus:ring-teal-400',
-                                            jumpTargetMode === 'page'
-                                                ? (jumpInputActive ? 'text-right' : 'text-center')
-                                                : ''
-                                        ]"
-                                        placeholder="اكتب رقم الحلقة"
-                                    />
+                                    <div class="relative flex-1 w-full max-w-xs">
+                                        <input
+                                            v-model.trim="jumpInput"
+                                            @focus="onJumpInputFocus"
+                                            @blur="onJumpInputBlur"
+                                            @keydown.enter.prevent="executeJumpValue"
+                                            :inputmode="jumpTargetMode === 'page' ? 'numeric' : 'text'"
+                                            :pattern="jumpTargetMode === 'page' ? '[0-9٠-٩۰-۹]*' : undefined"
+                                            :class="[
+                                                'w-full px-1 py-3 text-base bg-gray-700 rounded text-white focus:outline-none focus:ring-2 focus:ring-teal-400',
+                                                jumpTargetMode === 'page'
+                                                    ? (jumpInputActive ? 'text-right' : 'text-center')
+                                                    : ''
+                                            ]"
+                                            :placeholder="jumpTargetMode === 'page' ? 'رقم الصفحة...' : 'رقم الحلقة...'"
+                                        />
+                                        <button
+                                            @click="clearJumpInput"
+                                            class="absolute left-3 top-3 text-xl text-red-600 font-black transition-all duration-100 active:scale-90"
+                                        >
+                                            ✕
+                                        </button>
+                                    </div>
                                     <button
                                         @click="executeJumpValue"
-                                        class="bg-teal-600 text-white font-bold px-4 py-2 rounded hover:bg-teal-500 transition-all duration-100 active:scale-90"
+                                        class="bg-teal-600 text-white font-bold px-2 py-3 rounded hover:bg-teal-500 transition-all duration-100 active:scale-90"
                                     >
                                         اذهب
                                     </button>
@@ -5224,6 +5232,14 @@
                             if (num > this.totalPages) num = this.totalPages;
                             this.jumpInput = `${num}/${this.totalPages}`;
                         }
+                    }
+                },
+                clearJumpInput() {
+                    if (this.jumpTargetMode === 'page') {
+                        this.jumpInputActive = false;
+                        this.jumpInput = `${this.displayCurrentPage}/${this.totalPages}`;
+                    } else {
+                        this.jumpInput = '';
                     }
                 },
                 clearActiveFilterHighlight() {
