--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2073,6 +2073,7 @@
                                             :placeholder="jumpTargetMode === 'page' ? 'رقم الصفحة...' : 'رقم الحلقة...'"
                                         />
                                         <button
+                                            v-if="jumpTargetMode !== 'page'"
                                             @click="clearJumpInput"
                                             class="absolute left-3 top-3 text-xl text-red-600 font-black transition-all duration-100 active:scale-90"
                                         >
