--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1054,7 +1054,7 @@
 
             <!-- النافذة السريعة Modal -->
             <div v-if="showFastingWindow" class="fixed z-50 inset-0 overflow-y-auto bg-black bg-opacity-70 flex items-center justify-center">
-                <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-2/3 lg:w-1/2 max-h-[95vh] overflow-hidden flex flex-col">
+                <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] max-h-[100vh] overflow-hidden flex flex-col">
                     <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
                         <div class="flex justify-between items-center">
                             <h2 class="text-xl font-bold">النافذة السريعة <span class="text-xs text-yellow-300 font-normal">(تجريبي)</span></h2>
