--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4083,7 +4083,14 @@
                     }
                 },
                 isFailedToFetch() {
-                    return (this.errorMessage || '').trim() === 'Failed to fetch';
+                    const msg = (this.errorMessage || '').trim().toLowerCase();
+                    if (!msg) return false;
+                    return (
+                        msg.includes('failed to fetch') ||
+                        msg.includes('load failed') ||
+                        msg.includes('networkerror when attempting to fetch resource') ||
+                        msg.includes('network error')
+                    );
                 },
                 displayErrorMessage() {
                     return this.isFailedToFetch ? 'حدث خطأ، حاول مرة أخرى' : this.errorMessage;
