--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4093,7 +4093,9 @@
                     );
                 },
                 displayErrorMessage() {
-                    return this.isFailedToFetch ? 'حدث خطأ، حاول مرة أخرى' : this.errorMessage;
+                    return this.isFailedToFetch
+                        ? 'حدث خطأ، حاول مرة أخرى.\nوفي حال استمرار المشكلة، جرّب استخدام VPN.'
+                        : this.errorMessage;
                 },
                 showErrorOverlay() {
                     return Boolean(
