--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4094,7 +4094,7 @@
                 },
                 displayErrorMessage() {
                     return this.isFailedToFetch
-                        ? 'حدث خطأ، حاول مرة أخرى.\nوفي حال استمرار المشكلة، جرّب استخدام VPN.'
+                        ? 'حدث خطأ، حاول مرة أخرى.\n\nوفي حال استمرار المشكلة، جرّب استخدام VPN.'
                         : this.errorMessage;
                 },
                 showErrorOverlay() {
