--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -729,8 +729,18 @@
             class="fixed z-[105] inset-0 overflow-y-auto bg-black bg-opacity-70 flex items-center justify-center"
         >
             <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[95vh] overflow-hidden flex flex-col">
-                <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
-                    <h2 :class="['text-lg', isFailedToFetch ? 'text-yellow-300' : 'text-red-500', 'font-bold', 'text-center']">{{ displayErrorMessage }}</h2>
+                <div class="sticky top-0 z-10">
+                    <div :class="['mx-4 mt-4 rounded-xl shadow-lg ring-1 backdrop-blur bg-gradient-to-r', isFailedToFetch ? 'from-yellow-500/20 to-orange-500/20 ring-yellow-400/40' : 'from-red-600/20 to-pink-600/20 ring-red-400/40']">
+                        <div class="px-4 py-3 flex items-center gap-3">
+                            <div :class="[isFailedToFetch ? 'text-yellow-300' : 'text-red-400']" class="shrink-0">
+                                <span class="text-2xl">⚠️</span>
+                            </div>
+                            <div class="flex-1 text-center">
+                                <span :class="['block', isFailedToFetch ? 'text-yellow-300' : 'text-red-500', 'font-bold', 'text-base md:text-lg']">{{ displayErrorPrimary }}</span>
+                                <span :class="['block', 'text-gray-200', 'text-sm', 'mt-1']">{{ displayErrorSecondary }}</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div v-if="!isFailedToFetch" class="overflow-y-auto p-4 flex-1">
@@ -4092,10 +4102,15 @@
                         msg.includes('network error')
                     );
                 },
-                displayErrorMessage() {
+                displayErrorPrimary() {
                     return this.isFailedToFetch
-                        ? 'حدث خطأ، حاول مرة أخرى.\n\nوفي حال استمرار المشكلة، جرّب استخدام VPN.'
+                        ? 'حدث خطأ، حاول مرة أخرى'
                         : this.errorMessage;
+                },
+                displayErrorSecondary() {
+                    return this.isFailedToFetch
+                        ? 'وفي حال استمرار المشكلة، جرّب استخدام VPN.'
+                        : '';
                 },
                 showErrorOverlay() {
                     return Boolean(
