--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2342,7 +2342,7 @@
                                     v-tippy="tooltipText"
                                     :style="(isAnyFilterActive || searchQuery) ? 'color: rgb(0 6 255);' : ''"
                                 >
-                                    ({{ totalEpisodes }})
+                                    ({{ totalEpisodes }}) حلقة
                                 </span>
                             </div>
                             <div v-if="showEpisodeTableCaptureButton" class="mt-2 flex flex-col items-center gap-2">
